src/tests/zustand-pick-from/syntax-errors/pick-from-multiple-arguments.js
const user = useGlobalStore.pickFrom("order", "user");
